# MMART

./: CMakeLists.txt  LICENCE  Licence.rtf  NUIDefaultFlags.cmake  README.md
config/: NUI.xml
docs/: Copyright.txt  README.txt
gesture-recognition/include/: FeatureSelectionFilter.hpp  GestureRecognition.hpp  HandGestureRecognition.hpp  LSTM.hpp  ModelClassifier.hpp  NormalizationFilter.hpp
gesture-recognition/src/: FeatureSelectionFilter.cpp  GestureRecognition.cpp  HandGestureRecognition.cpp  LSTM.cpp  ModelClassifier.cpp  NormalizationFilter.cpp  test.cpp
include/: defines.h.cmake
include/attention/: AreaHit.h  AttentionMonitoring.h  SpatialAttentionModel.h  TargetArea.h
include/config/: NUIconfig.hpp
include/controller/: ControlChannel.hpp  Controller.hpp  TCPChannel.hpp
include/core/: NUIDLLexport.hpp  TripleBuffer.hxx  common.hpp  errorcodes.hpp
include/devices/: DepthSenseCamera.hpp  IntelRealSenseCamera.hpp  KinectV2.hpp  LEAPMotionWrapper.hpp  MyoWrapper.hpp  PMDNano.hpp  Webcam.hpp
include/eventmanager/: DataDumper.hpp  Events.hpp  IProcessingModule.hpp  Modality.hpp  NUIEventManager.hpp  SimpleEventListener.hpp
include/serialize/: GPufferSerializer.hpp  HDF5Serializer.hpp  OpenCVSerializer.hpp  PointCloudSerializer.hpp
interfaces/: interface.proto
java/client/: pom.xml
java/client/src/main/java/de/dfki/av/event/: LeapMotionGestureListener.java  LeapMotionListener.java  SystemEventListener.java  UserAttentionEventListener.java
java/client/src/main/java/de/dfki/av/math/: FastMath.java  Vector2f.java  Vector3f.java
java/client/src/main/java/de/dfki/av/nui/: EventClient.java  Receiver.java
src/: CMakeLists.txt
src/app/: GestureRecoder_NUI.cpp
src/attention/: AreaHit.cpp  AttentionMonitoring.cpp  SpatialAttentionModel.cpp  TargetArea.cpp
src/config/: NUIconfig.cpp
src/controller/: Controller.cpp  TCPChannel.cpp
src/devices/: DepthSenseCamera.cpp  IntelRealSenseCamera.cpp  KinectV2.cpp  LEAPMotionWrapper.cpp  MyoWrapper.cpp  PMDNano.cpp  Webcam.cpp
src/eventmanager/: DataDumper.cpp  Events.cpp  IProcessingModule.cpp  Modality.cpp  NUIEventManager.cpp  SimpleEventListener.cpp
src/serialize/: GPufferSerializer.cpp  HDF5Serializer.cpp  OpenCVSerializer.cpp  PointCloudSerializer.cpp
tools/cmake/: FindDepthSenseSDK.cmake  FindFreenect2.cmake  FindGRPC.cmake  FindGRT.cmake  FindHDF5.cmake  FindKinect.cmake  FindLeapSDK.cmake  FindMYO.cmake  FindPMDNano.cmake  FindRSSDK.cmake
